--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-  <div class="bg-darker-yellow dark:bg-tailwind-dark" id="preloader"></div>
+  <!-- <div class="bg-darker-yellow dark:bg-tailwind-dark" id="preloader"></div> -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
   <script>
-    let loader = document.querySelector('#preloader')
-    window.addEventListener('load', () => {
-      loader.style.transform = 'translateY(-100%)';
-      loader.style.transition = 'all 2.2s ease-in';
-    })
+    // let loader = document.querySelector('#preloader')
+    // window.addEventListener('load', () => {
+    //   loader.style.transform = 'translateY(-100%)';
+    //   loader.style.transition = 'all 2.2s ease-in';
+    // })
   </script>
 </body>
 
