--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <!-- <div class="bg-darker-yellow dark:bg-tailwind-dark" id="preloader"></div> -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script>
-    // let loader = document.querySelector('#preloader')
-    // window.addEventListener('load', () => {
-    //   loader.style.transform = 'translateY(-100%)';
-    //   loader.style.transition = 'all 2.2s ease-in';
-    // })
-  </script>
+  <!-- <script>
+    let loader = document.querySelector('#preloader')
+    window.addEventListener('load', () => {
+      loader.style.transform = 'translateY(-100%)';
+      loader.style.transition = 'all 2.2s ease-in';
+    })
+  </script> -->
 </body>
 
 </html>
