bugs were fixed very well

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="/loader.svg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,16 +13,16 @@
 </head>
 
 <body>
-  <!-- <div class="bg-darker-yellow dark:bg-tailwind-dark" id="preloader"></div> -->
+  <div class="bg-darker-yellow dark:bg-tailwind-dark" id="preloader"></div>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <!-- <script>
+  <script>
     let loader = document.querySelector('#preloader')
     window.addEventListener('load', () => {
       loader.style.transform = 'translateY(-100%)';
-      loader.style.transition = 'all 2.2s ease-in';
+      loader.style.transition = 'all 1.5s ease-in';
     })
-  </script> -->
+  </script>
 </body>
 
 </html>
